<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".ui.activities."
    tools:ignore="ContentDescription">

    <ImageView
        android:id="@+id/img_Header"
        android:layout_width="@dimen/img_splash_screen_width_180"
        android:layout_height="@dimen/img_splash_screen_height_180"
        android:layout_marginTop="92dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_cloud_filled" />

    <TextView
        android:id="@+id/txt_Header_1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="@font/core_sans_cr_55_medium"
        android:text="@string/txt_must_sign_in"
        android:textAlignment="center"
        android:textColor="@color/colorText"
        android:textSize="@dimen/txt_font_size_header_32"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_Header" />

    <TextView
        android:id="@+id/txt_Header_2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="@font/core_sans_cr_45_regular"
        android:text="@string/txt_must_sign_in_2"
        android:textAlignment="center"
        android:textColor="@color/colorText2"
        android:textSize="@dimen/txt_font_size_header_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_Header_1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_Sign_In"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="@dimen/btn_width_small_134"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/ripple_btn_primary_color_selector"
        android:fontFamily="@font/core_sans_cr_55_medium"
        android:text="@string/button_sign_in"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/btn_font_size_small_14"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_Header_2" />

    <TextView
        android:id="@+id/txtView_Sign_Up"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="@dimen/btn_width_small_134"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@android:color/transparent"
        android:fontFamily="@font/core_sans_cr_55_medium"
        android:text="@string/button_sign_up"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/btn_font_size_small_14"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_Sign_In" />

</androidx.constraintlayout.widget.ConstraintLayout>